--- a/src/search.html
+++ b/src/search.html
@@ -13,15 +13,15 @@
 <body>
     <main>
         <div class="container-form">
-            <form action="#">
-                <select name="lenguajes" id="lang">
+            <form id="formulario">
+                <select name="prefer" id="prefer">
                     <option value="seleccionar">Selecciona tu preferencia</option>
                     <option value="dev">Programación</option>
                     <option value="ui">UI</option>
                     <option value="ux">UX</option>
                 </select>
                 
-                <select name="lenguajes" id="lang">
+                <select name="day" id="day">
                     <option value="seleccionar">Selecciona tu horario disponible</option>
                     <option value="lunes">Lunes</option>
                     <option value="martes">Martes</option>
@@ -31,7 +31,7 @@
                     <option value="sabado">Sabado</option>
                 </select>
 
-                <select name="lenguajes" id="lang">
+                <select name="modal" id="modal">
                     <option value="seleccionar">Selecciona tu modalidad preferida</option>
                     <option value="presencial">Presencial</option>
                     <option value="virtual">Virtual</option>
@@ -42,6 +42,9 @@
             </form>
 
     </main>
-    
+
 </body>
+
+    <script src="main.js"></script>
+
 </html>
