EMPEZANDO CON EL SISTEMA RE REC

--- a/front/src/search.html
+++ b/front/src/search.html
@@ -38,6 +38,14 @@
                     <option value="semipresencial">Semipresencial</option>
                 </select>
 
+                <select name="valoration" id="valoration">
+                    <option value="seleccionar">Selecciona qué es lo más importante para ti</option>
+                    <option value="method">Método de esnseñanza</option>
+                    <option value="personal-growth">Crecimiento personal</option>
+                    <option value="rec">Recomendación de otros</option>
+                    <option value="teacher">Profesor</option>
+                </select>
+
                 <input type="submit" value="Enviar">
             </form>
 
