--- a/front/src/search.html
+++ b/front/src/search.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="search.css">
-    <title>Document</title>
+    <title>STI</title>
 </head>
 <body>
     <main>
@@ -19,6 +19,7 @@
                     <option value="dev">Programación</option>
                     <option value="ui">UI</option>
                     <option value="ux">UX</option>
+                    <option value="other">Otro</option>
                 </select>
                 
                 <select name="day" id="day">
@@ -39,8 +40,8 @@
                 </select>
 
                 <select name="valoration" id="valoration">
-                    <option value="seleccionar">Selecciona qué es lo más importante para ti</option>
-                    <option value="method">Método de esnseñanza</option>
+                    <option value="seleccionar">Selecciona el factor más importante para ti</option>
+                    <option value="method">Método de enseñanza</option>
                     <option value="personal-growth">Crecimiento personal</option>
                     <option value="rec">Recomendación de otros</option>
                     <option value="teacher">Profesor</option>
