ahora puede pasar json a endpoint web

--- a/front/src/search.html
+++ b/front/src/search.html
@@ -16,7 +16,7 @@
             <form id="formulario">
                 <select name="prefer" id="prefer">
                     <option value="seleccionar">Selecciona tu preferencia</option>
-                    <option value="dev">Programación</option>
+                    <option value="develop">Programación</option>
                     <option value="ui">UI</option>
                     <option value="ux">UX</option>
                 </select>
