--- a/front/src/detail/detail.html
+++ b/front/src/detail/detail.html
@@ -11,14 +11,44 @@
     <title>STI</title>
 </head>
 <body>
-    <div class="similars">
+
+    <div id="title">
         <h1 class="display">Tu Electiva Recomendada</h1>
     </div>
-    <div id="class-name">
+    <div id="group" class="row justify-content-center">
+        <div id="type-img" class="col-4">
+            <img src="/src/img/detailimg.jpg" alt="">
+        </div>
+        <div id="type-txt" class="col-6">
+            <div class="top">
+                <div id="class-name">
+                </div>
+                <div id="preference">
+                </div>
+            </div>
+            <div class="middle">
+                <div class="titles">
+                    <h2>Horario disponible:</h2>
+                </div>
+                <div id="timer">
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="titles">
+                    <h2>Modalidad:</h2>
+                </div>
+                <div id="modal">
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="visual" class="txt-body">
 
+    <div id="mini-title">
+        <h2 class="display2">Electivas similares</h2>
     </div>
+    <div id="similars">
+    </div>
+
 </body>
 <script src="detail.js"></script>
 </html>
